--- a/app/view/purchase/confirmOrder.html
+++ b/app/view/purchase/confirmOrder.html
@@ -1,11 +1,14 @@
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
-    <h4 class="alert alert-success">
-        {{constant.MSG0014}}
-    </h4>
+	<div class="well text-center" ng-controller="purchaseController">
 
-    <button class="btn-sm btn-primary">
-        Ir paraMeus Pedidos
-    </button>
+		<h1 class="text-success">{{constant.MSG0014}}</h1>
+		<h4>Seu pedido foi efetuado com sucesso.</h4>
+		<h4>A partir de agora você pode acompanhar seu pedido bem como cancelar, pagar etc...</h4>
+
+		<a class="btn btn-sm btn-primary" href="#/customer/mainCustomer">
+			Ir para  Meus Pedidos
+		</a>
+	</div>
 
 </div>
