--- a/app/view/product/listProduct.html
+++ b/app/view/product/listProduct.html
@@ -1,80 +1,83 @@
 <div ng-init="getProducts()">
 
-    <legend class="text-gray font-18"><i class="glyphicon glyphicon-camera"></i> Produtos</legend>
+	<legend class="text-gray font-18"><i class="glyphicon glyphicon-th-list"></i> Produtos</legend>
 
-    <!--loop-->
-    <div class="row"
-         ng-repeat="row in rows| startFrom: currentPage * pageSize| limitTo: pageSize"
-         id="{{row.sq_product}}">
+	<!--loop-->
+	<div class="row"
+	ng-repeat="row in rows| startFrom: currentPage * pageSize| limitTo: pageSize"
+	id="{{row.sq_product}}">
 
-        <!--image-->
-        <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+	<!--image-->
+	<div class="col-xs-12 col-sm-offset-3 col-sm-2 col-md-offset-3 col-md-2 col-lg-offset-3 col-lg-2">
 
-            <!--image-->
-            <a href='#/product/upProduct/{{row.sq_product}}'>
+		<!--image-->
+		<a href='#/product/upProduct/{{row.sq_product}}'>
 
-                <div class="thumbnail">
-                    <img class="caption img-responsive"
-                         src={{row.im_product_image.encoded}}
-                         height="200"
-                         width="200"
-                         />
-                </div>
+			<div class="thumbnail">
+				<img class="caption img-responsive"
+				src={{row.im_product_image.encoded}}
+				height="200"
+				width="200"
+				/>
+			</div>
 
-            </a>
+		</a>
 
-        </div>
+	</div>
 
-        <!--product data-->
-        <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
+	<!--product data-->
+	<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
 
-            <!--title-->
-            <legend class="text-success text-capitalize">{{row.ds_product}}</legend>
+		<!--title-->
+		<legend class="text-success text-capitalize">{{row.ds_product}}</legend>
 
-            <dl class="dl-horizontal">
+		<dl class="dl-horizontal">
 
-                <dt class="text-gray">Preço:</dt>
-                <dd>{{row.nu_value| currency}}</dd>
+			<dt class="text-gray">Preço:</dt>
+			<dd>{{row.nu_value| currency}}</dd>
 
-                <dt class="text-gray">Em estoque:</dt>
-                <dd>{{row.nu_quantity}} Und</dd>
+			<dt class="text-gray">Em estoque:</dt>
+			<dd>{{row.nu_quantity}} Und</dd>
 
-                <dt class="text-gray">Tempo de produção:</dt>
-                <dd>{{row.nu_production}} Dia(s)</dd>
+			<dt class="text-gray">Tempo de produção:</dt>
+			<dd>{{row.nu_production}} Dia(s)</dd>
 
-                <dt class="text-gray">Ativo</dt>
-                <dd>
-                    <label class="switch">
-                        <input
-                            type="checkbox"
-                            class="switch-input"
-                            id="status_{{row.sq_product}}"
-                            ng-checked="row.sq_status_product == constant.STATUS_ACTIVE"
-                            ng-click="row.sq_status_product == constant.STATUS_ACTIVE ? inactivateProduct(row.sq_product) : activateProduct(row.sq_product)">
-                        <span class="switch-label" data-on="" data-off=""></span>
-                        <span class="switch-handle"></span>
-                    </label>
-                </dd>
+			<dt class="text-gray">Ativo</dt>
+			<dd>
+				<label class="switch">
+					<input
+					type="checkbox"
+					class="switch-input"
+					id="status_{{row.sq_product}}"
+					ng-checked="row.sq_status_product == constant.STATUS_ACTIVE"
+					ng-click="row.sq_status_product == constant.STATUS_ACTIVE ? inactivateProduct(row.sq_product) : activateProduct(row.sq_product)">
+					<span class="switch-label" data-on="" data-off=""></span>
+					<span class="switch-handle"></span>
+				</label>
+			</dd>
 
-            </dl>
+		</dl>
 
-            <hr />
+		<hr />
 
-        </div>
+	</div>
+</div>
 
-    </div>
+<!--button new-->
+<div class="form-group row">
+	<div class="col-xs-12 col-sm-offset-3 col-sm-4 col-md-offset-3 col-md-4 col-lg-offset-3 col-lg-4">
 
-    <!--button new-->
-    <a class="btn btn-primary btn-sm" href="#/product/addProduct">Novo <i class="glyphicon glyphicon-plus"></i></a>
+		<a class="btn btn-primary btn-sm" href="#/product/addProduct">Novo <i class="glyphicon glyphicon-plus"></i></a>
 
-    <!--pagination-->
-    <button class="btn btn-default btn-sm" ng-click="currentPage = currentPage - 1" ng-disabled="currentPage == 0" >
-        <i class="text-info glyphicon glyphicon-arrow-left"></i>
-    </button>
+		<!--pagination-->
+		<button class="btn btn-default btn-sm" ng-click="currentPage = currentPage - 1" ng-disabled="currentPage == 0" >
+			<i class="text-info glyphicon glyphicon-arrow-left"></i>
+		</button>
 
-    <button class="btn btn-default btn-sm" ng-click="currentPage = currentPage + 1" ng-disabled="currentPage >= rows.length / pageSize - 1">
-        <i class="text-info glyphicon glyphicon-arrow-right"></i>
-    </button>
-    <!--pagination-->
+		<button class="btn btn-default btn-sm" ng-click="currentPage = currentPage + 1" ng-disabled="currentPage >= rows.length / pageSize - 1">
+			<i class="text-info glyphicon glyphicon-arrow-right"></i>
+		</button>
+		<!--pagination-->
 
+	</div>
 </div>
