--- a/app/view/purchase/confirmOrder.html
+++ b/app/view/purchase/confirmOrder.html
@@ -4,7 +4,7 @@
 
 		<h1 class="text-success">{{constant.MSG0014}}</h1>
 		<h4>Seu pedido foi efetuado com sucesso.</h4>
-		<h4>A partir de agora você pode acompanhar seu pedido bem como cancelar, pagar etc...</h4>
+		<h4>A partir de agora você pode acompanhar o status seu pedido.</h4>
 
 		<a class="btn btn-sm btn-primary" href="#/customer/mainCustomer">
 			Ir para  Meus Pedidos
