[up] Freeze order

--- a/app/view/customer/orderCustomer.html
+++ b/app/view/customer/orderCustomer.html
@@ -94,7 +94,8 @@
             Cancelar
         </button>
 
-        <button class="btn btn-default btn-sm" ng-show="order.sq_status != constant.NUMBER_TEN">
+        <button class="btn btn-default btn-sm" ng-show="order.sq_status != constant.NUMBER_TEN"
+        ng-click="freezeOrder(order.sq_order)">
             Congelar
         </button>
 
