--- a/app/view/product/upProduct.html
+++ b/app/view/product/upProduct.html
@@ -140,7 +140,7 @@
 				<input class="form-control input-sm"
 				placeholder="Altura do produto"
 				name="nu_height"
-				type="number"
+				type="text"
 				value="{{row.nu_height}}"
 				ng-model="row.nu_height"
 				maxlength="4"
@@ -174,8 +174,9 @@
 				<input class="form-control input-sm"
 				placeholder="Largura do produto"
 				name="nu_width"
-				type="number"
+				type="text"
 				ng-model="row.nu_width"
+				value="{{row.nu_width"}}"
 				maxlength="4"
 				min="1"
 				max="{{row.st_foldable? 9999 : constant.BOX_DELIVERY_MAX_PACKAGE_SIZE - row.nu_height- row.nu_length}}"
@@ -207,7 +208,7 @@
 				<input class="form-control input-sm"
 				placeholder="Comprimento do produto"
 				name="nu_length"
-				type="number"
+				type="text"
 				ng-model="row.nu_length"
 				maxlength="4"
 				min="1"
@@ -270,7 +271,7 @@
 				<input class="form-control input-sm"
 				placeholder="Quantidade"
 				name="nu_quantity"
-				type="number"
+				type="text"
 				ng-model="row.nu_quantity"
 				min="0"
 				maxlength="4"
@@ -301,7 +302,7 @@
 
 				<input class="form-control input-sm"
 				placeholder="Tempo de produção"
-				type="number"
+				type="text"
 				name="nu_production"
 				ng-model="row.nu_production"
 				min="0"
